# nLab

./: .gitignore  .gitmodules  Cargo.toml  README.md  forge.config.js  main.js  nlab.html  nscope.html  package-lock.json  package.json  preload.js  webpack.config.js
.github/workflows/: packaging.yml
app/: index.html
app/assets/css/: bootstrap_theme.min.css  bootstrap_theme.min.css.map  nscope.css
app/assets/js/: renderer.js
app/css/: bootstrap_theme.min.css  bootstrap_theme.min.css.map  nscope.css
app/js/: analogInputs.js  analogOutputs.js  glCanvas.js  nScopeAPI.js  pulseOutputs.js  renderer.js
scss/: _custom.scss
src/: analog_inputs.rs  analog_output.rs  index.js  lib.rs  monitor.rs  pulse_output.rs  traces.rs  trigger.rs
src/assets/icons/: nLabApp_Icon.icns  nscope_icon.icns
src/css/: nlab.css  nscope.css  plotly.css  power_status.css
src/js/: AnalogInputs.js  AnalogOutputs.js  Axes.js  Flags.js  Message.js  PowerStatus.js  PrecisionInput.js  PulseOutputs.js  RunState.js  Save.js  Timing.js  Trigger.js  Utils.js  analogInputs.js  analogOutputs.js  nScopeAPI.js  power_status.js  pulseOutputs.js
src/scss/: button_style.scss  custom_bootstrap.scss  slider_style.scss
